mise en place du header

--- a/index.html
+++ b/index.html
@@ -19,9 +19,11 @@
     </nav>
 
     <header id="acceuil">
+        <canvas id='world'></canvas>
         <h1>Nadège Duflo</h1>
         <h2>Dessinatrice, graphiste, développeuse front end</h2>
         <img src="ressources/icone/paw-solid.svg" alt="mon logo" title="Ceci est mon logo" id="logo">
+            
     </header>
 
     <section id="valeur">
@@ -66,5 +68,6 @@
         <span class="copyDate">Nadège DUFLO &copy; | 2020</span>
     </footer>
     
+    <script src="app_confetti.js"></script>
 </body>
 </html>
